# koda

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  examples.py  pyproject.toml  run_tests.sh  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: push.yml
bench/: run.py
examples/: login_credentials.py  multi_login.py  person.py  school.py  validation.py
koda/: __init__.py  _cruft.py  _generics.py  compose_.py  conversions.py  either.py  generics.py  lazy_list.py  mappings.py  maybe.py  result.py  safe_try_.py  tuple.py  utils.py  validation.py
koda/_cruft/: general.py  tuple.py  utils.py  validation.py
koda/json/: openapi.py  serialization.py  utils.py  validation.py
koda/utils/: test.py
scripts/code_generation/: obj.py
scripts/openapi_validation/: openapi1.py
tests/: test_310.py  test_compose_.py  test_conversions.py  test_either.py  test_init.py  test_mappings.py  test_maybe.py  test_not_typesafe.py  test_result.py  test_together.py  test_tuple.py  test_utils.py  utils.py
tests/test_json/: test_openapi_complex_examples.py  test_serialization.py  test_types.py  test_validation.py
