[tool.poetry]
name = "koda"
version = "0.10.2"
readme = "README.md"
description = "Type-safe functional tools for Python"
authors = ["Keith Philpott"]
license = "MIT"
homepage = "https://github.com/keithasaurus/koda"
keywords = ["functional programming", "type hints"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "22.1.0"
coverage = "6.3.1"
mypy = "0.931"
pytest = "7.0.0"
pytest-cov = "3.0.0"
pyright = "0.0.13"
pre-commit = "2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = false
local_partial_types = true
no_implicit_optional = true
no_implicit_reexport = true
strict_optional = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true